--- a/Views/Anchor/Index.cshtml
+++ b/Views/Anchor/Index.cshtml
@@ -849,7 +849,7 @@
                     $('#div_upload_cover,#div_cover').show();
                 },
                 error: function (res) {
-                    layer.msg(res.message);
+                    //layer.msg(res.message);
                 }
             });
         }
